--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,15 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "query-string": "^7.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0"
+    "react-emoji": "^0.5.0",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.2.1",
+    "react-scripts": "^3.0.0",
+    "react-scroll-to-bottom": "^4.1.2",
+    "socket.io-client": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
